--- a/src/HttpClientTest/HttpClientTest.csproj
+++ b/src/HttpClientTest/HttpClientTest.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Hl7.Fhir.R4" Version="5.10.3" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.8" />
